add test folder

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 *.tfstate
 *.tfstate.backup
 .terraform.lock.hcl
+test/vpc/.terraform
+test/vpc/.terraform.lock.hcl
+test/vpc/*.tfstate
+test/vpc/*.tfstate.backup
+test/services/sample/.terraform
+test/services/sample/.terraform.lock.hcl
+test/services/sample/*.tfstate
+test/services/sample/*.tfstate.backup
+test/services/nginx/.terraform
+test/services/nginx/.terraform.lock.hcl
+test/services/nginx/*.tfstate
+test/services/nginx/*.tfstate.backup
+test/services/web-cluster/.terraform
+test/services/web-cluster/.terraform.local.hcl
+test/services/web-cluster/*.tfstate
+test/services/web-cluster/*.tfstate.backup
